# reco

./: .gitignore  Cargo.toml  README.md
crates/reco/: Cargo.toml
crates/reco-cli/: Cargo.toml
crates/reco-cli/src/: main.rs
crates/reco-convert/: Cargo.toml
crates/reco-convert/src/: errors.rs  lib.rs  types.rs
crates/reco-convert/src/converters/: mod.rs  pdf.rs
crates/reco-enhance/: Cargo.toml
crates/reco-enhance/src/: enhance.rs  errors.rs  lib.rs
crates/reco-gui/: Cargo.toml
crates/reco-gui/src/: main.rs  routes.rs  types.rs
crates/reco-gui/src/views/: back_button.rs  cbz.rs  directory.rs  mod.rs  unknown_file.rs
crates/reco-merge/: Cargo.toml
crates/reco-merge/src/: lib.rs
crates/reco-pack/: Cargo.toml
crates/reco-pack/src/: lib.rs
crates/reco-view/: Cargo.toml
crates/reco-view-cli/: Cargo.toml
crates/reco-view-cli/src/: main.rs
crates/reco-view/src/: cbz_view.rs  errors.rs  lib.rs
crates/reco/src/: errors.rs  lib.rs  reader.rs  writer.rs
