[package]
name = "reco-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "reco"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
reco.workspace = true
reco-convert.workspace = true
reco-merge.workspace = true
reco-pack.workspace = true
reco-view.workspace = true
tracing-subscriber.workspace = true
