[package]
name = "reco-enhance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
ndarray.workspace = true
ort.workspace = true
parking_lot.workspace = true
rayon.workspace = true
reco.workspace = true
thiserror.workspace = true
tracing.workspace = true
