[package]
name = "reco-pack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
glob.workspace = true
image.workspace = true
infer.workspace = true
lexical-sort.workspace = true
reco.workspace = true
thiserror.workspace = true
tracing.workspace = true
zip.workspace = true
